--- a/src/app/components/dynamic-form/dynamic-form.component.html
+++ b/src/app/components/dynamic-form/dynamic-form.component.html
@@ -1,17 +1,17 @@
 <div>
     <!-- Botones para seleccionar el tipo de formulario -->
-    <button mat-button (click)="selectForm('heteroevaluacion')">Heteroevaluación</button>
-    <button mat-button (click)="selectForm('autoevaluacion-i')">Autoevaluación I</button>
-    <button mat-button (click)="selectForm('autoevaluacion-ii')">Autoevaluación II</button>
-    <button mat-button (click)="selectForm('coevaluacion-i')">Coevaluación I</button>
-    <button mat-button (click)="selectForm('coevaluacion-ii')">Coevaluación II</button>
+    <button mat-button (click)="loadFormulario('heteroevaluacion')">Heteroevaluación</button>
+    <button mat-button (click)="loadFormulario('autoevaluacion-i')">Autoevaluación I</button>
+    <button mat-button (click)="loadFormulario('autoevaluacion-ii')">Autoevaluación II</button>
+    <button mat-button (click)="loadFormulario('coevaluacion-i')">Coevaluación I</button>
+    <button mat-button (click)="loadFormulario('coevaluacion-ii')">Coevaluación II</button>
 </div>
 
 <!-- Vista por pasos usando mat-stepper para los Ámbitos -->
 <mat-vertical-stepper *ngIf="!isFormView" [linear]="true" [formGroup]="stepperForm" #mainStepper>
     <!-- Ámbitos -->
     <mat-step *ngFor="let ambito of ambitos; let i = index" [formGroupName]="'ambito_' + i">
-        <ng-template matStepLabel>{{ ambito.titulo }}</ng-template>
+        <ng-template matStepLabel>{{ ambito.nombre }}</ng-template>
 
         <!-- Botón para colapsar/expandir todas las preguntas con ícono de ojo -->
         <button mat-raised-button color="primary" (click)="toggleAll(i)">
@@ -20,76 +20,50 @@
 
         <!-- Preguntas dentro de los ámbitos usando mat-accordion -->
         <mat-accordion [multi]="true">
-            <mat-expansion-panel *ngFor="let pregunta of ambito.preguntas; let j = index" [expanded]="expandAllState[i]"
+            <mat-expansion-panel *ngFor="let item of ambito.items; let j = index" [expanded]="expandAllState[i]"
                 class="custom-expansion-panel">
                 <mat-expansion-panel-header>
                     <mat-panel-title>
-                        <!-- Ícono para hacer más llamativo el encabezado de la pregunta -->
-                        <mat-icon color="accent">help_outline</mat-icon> {{ pregunta.text }}
+                        <mat-icon color="accent">help_outline</mat-icon> {{ item.text }}
                     </mat-panel-title>
                 </mat-expansion-panel-header>
 
                 <!-- Opción de única respuesta (radio buttons) -->
-                <div *ngIf="pregunta.tipo === 'radio'">
-                    <mat-radio-group [formControlName]="'pregunta_' + generateControlName(pregunta.text)">
-                        <mat-radio-button *ngFor="let option of pregunta.options" [value]="option.valor">
-                            {{ option.texto }}
+                <div *ngIf="item.campos && item.campos[0]?.tipo_campo === 1">
+                    <mat-radio-group [formControlName]="'pregunta_' + generateControlName(item.text)">
+                        <mat-radio-button *ngFor="let option of item.campos[0]?.escala" [value]="option.valor">
+                            {{ option.nombre }}
                         </mat-radio-button>
                     </mat-radio-group>
                 </div>
 
-                <!-- Opción de selección múltiple (checkboxes) -->
-                <div *ngIf="pregunta.tipo === 'checkbox'">
-                    <mat-checkbox *ngFor="let option of pregunta.options"
-                        [formControlName]="'pregunta_' + generateControlName(pregunta.text)">
-                        {{ option.texto }}
-                    </mat-checkbox>
-                </div>
-
                 <!-- Opción de respuesta abierta (input/textarea) -->
-                <div *ngIf="pregunta.tipo === 'textarea' || pregunta.tipo === 'input'">
+                <div *ngIf="item.tipo === 'input' || item.tipo === 'textarea'">
                     <mat-form-field appearance="fill">
-                        <mat-label>{{ pregunta.text }}</mat-label>
-                        <input matInput [formControlName]="'pregunta_' + generateControlName(pregunta.text)">
+                        <mat-label>{{ item.text }}</mat-label>
+                        <input matInput [formControlName]="'pregunta_' + generateControlName(item.text)">
                     </mat-form-field>
                 </div>
 
-                <!-- Input para la carga de archivos -->
-                <div *ngIf="pregunta.tipo === 'file'">
+                <!-- Carga de archivos -->
+                <div *ngIf="item.tipo === 'file'">
                     <mat-form-field appearance="fill">
                         <mat-label>Cargar archivo</mat-label>
                         <input type="file" (change)="handleFileInputChange($event)">
                     </mat-form-field>
                 </div>
 
-                <!-- Botón para descargar evidencias  -->
-                <div *ngIf="pregunta.tipo === 'download'">
+                <!-- Botón para descargar archivos -->
+                <div *ngIf="item.tipo === 'download'">
                     <button mat-raised-button color="primary" (click)="downloadDocument()">
                         <mat-icon>cloud_download</mat-icon> Descargar Evidencia
-                    </button>
-                </div>
-
-                <!-- Botón para cargar evidencias justo después del enunciado -->
-                <div
-                    *ngIf="pregunta.text === 'El cuerpo docente debe cargar el acta de co-evalaucion curricularen enste boton: '">
-                    <input type="file" (change)="handleFileInputChange($event)" />
-                    <button mat-raised-button color="primary" (click)="cargarEvidencias()">
-                        <mat-icon>upload</mat-icon> {{ coevaluacionI.botonCargarEvidencias }}
-                    </button>
-                </div>
-
-                <!-- Botón para cargar evidencias en Autoevaluación II debajo del enunciado específico -->
-                <div *ngIf="pregunta.text === 'El cuerpo docente debe cargar las evidencias correspondientes:'">
-                    <input type="file" (change)="handleFileInputChange($event)" />
-                    <button mat-raised-button color="primary" (click)="cargarEvidencias()">
-                        <mat-icon>upload</mat-icon> Cargar Evidencias
                     </button>
                 </div>
 
             </mat-expansion-panel>
         </mat-accordion>
 
-        <!-- Botones Anterior y Siguiente para avanzar entre ámbitos -->
+        <!-- Botones para avanzar y retroceder entre ámbitos -->
         <div>
             <button mat-button matStepperPrevious>Anterior</button>
             <button mat-button matStepperNext>Siguiente</button>
@@ -97,63 +71,7 @@
     </mat-step>
 </mat-vertical-stepper>
 
-<!-- Vista en formato de formulario común (sin stepper) -->
-<div *ngIf="isFormView" [formGroup]="stepperForm">
-    <div *ngFor="let ambito of ambitos; let i = index" [formGroupName]="'ambito_' + i">
-        <h3>{{ ambito.titulo }}</h3>
-        <mat-accordion [multi]="true">
-            <mat-expansion-panel *ngFor="let pregunta of ambito.preguntas; let j = index"
-                class="custom-expansion-panel">
-                <mat-expansion-panel-header>
-                    <mat-panel-title>
-                        <!-- Ícono para hacer más llamativo el encabezado de la pregunta -->
-                        <mat-icon color="accent">help_outline</mat-icon> {{ pregunta.text }}
-                    </mat-panel-title>
-                </mat-expansion-panel-header>
-
-                <!-- Opciones para cada pregunta -->
-                <div *ngIf="pregunta.tipo === 'radio'">
-                    <mat-radio-group [formControlName]="'pregunta_' + generateControlName(pregunta.text)">
-                        <mat-radio-button *ngFor="let option of pregunta.options" [value]="option.valor">
-                            {{ option.texto }}
-                        </mat-radio-button>
-                    </mat-radio-group>
-                </div>
-
-                <div *ngIf="pregunta.tipo === 'checkbox'">
-                    <mat-checkbox *ngFor="let option of pregunta.options"
-                        [formControlName]="'pregunta_' + generateControlName(pregunta.text)">
-                        {{ option.texto }}
-                    </mat-checkbox>
-                </div>
-
-                <div *ngIf="pregunta.tipo === 'textarea' || pregunta.tipo === 'input'">
-                    <mat-form-field appearance="fill">
-                        <mat-label>{{ pregunta.text }}</mat-label>
-                        <input matInput [formControlName]="'pregunta_' + generateControlName(pregunta.text)">
-                    </mat-form-field>
-                </div>
-
-                <div *ngIf="pregunta.tipo === 'file'">
-                    <mat-form-field appearance="fill">
-                        <mat-label>Cargar archivo</mat-label>
-                        <input type="file" (change)="handleFileInputChange($event)">
-                    </mat-form-field>
-                </div>
-
-                <!-- Botón para descargar evidencias  -->
-                <div *ngIf="pregunta.tipo === 'download'">
-                    <button mat-raised-button color="primary" (click)="downloadDocument()">Descargar Documento
-                        <mat-icon>cloud_download</mat-icon> Descargar Evidencia
-                    </button>
-                </div>
-
-            </mat-expansion-panel>
-        </mat-accordion>
-    </div>
-</div>
-
-<!-- Botón final para enviar -->
+<!-- Botón final para enviar el formulario -->
 <div>
     <button mat-button (click)="submit()">Guardar</button>
 </div>
