feat: Ajustes generales udistrital/sga_documentacion#472

--- a/src/app/components/definir-escalas/definir-escalas.component.html
+++ b/src/app/components/definir-escalas/definir-escalas.component.html
@@ -22,7 +22,7 @@
                     <!-- Encabezados de la tabla -->
                     <div class="escala-header">
                         <div class="escala-header-item">{{ 'definir_escalas.tipo' | translate }}</div>
-                        <div class="escala-header-item">{{ 'definir_escalas.valor' | translate }}</div>
+                        <div class="escala-header-item">{{ 'definir_escalas.criterios' | translate }}</div>
                         <div class="escala-header-item">{{ 'definir_escalas.acciones' | translate }}</div>
                     </div>
                     <div class="escala-item row mb-2" *ngFor="let escala of cualitativaEscalas; let i = index">
@@ -79,9 +79,9 @@
 
             <!-- Lista de escalas cuantitativas -->
             <div class="escala-container">
-                <div class="escala-list">
-                    <!-- Encabezados de la tabla -->
-                    <div class="escala-header2">
+                <div class="escala-list">                    
+                     <!-- Encabezados de la tabla -->
+                     <div class="escala-header">
                         <div class="escala-header-item">{{ 'definir_escalas.tipo' | translate }}</div>
                         <div class="escala-header-item">{{ 'definir_escalas.valor' | translate }}</div>
                         <div class="escala-header-item">{{ 'definir_escalas.acciones' | translate }}</div>
